Fix z-index and accidental removal of data-section attribute

--- a/assets/css/scss/_view-dropdown.scss
+++ b/assets/css/scss/_view-dropdown.scss
@@ -211,7 +211,7 @@
 	}
 
 	&.view-dropdown--open {
-		z-index: 10;
+		z-index: 15;
 
 		.view-dropdown-toggle__chevron {
 			rotate: none;
